logger and database upd